actualización en los archivos propiedades y cascada

--- a/style_cascada.css
+++ b/style_cascada.css
@@ -11,6 +11,13 @@
 .clase1 {background-color: blue;}
 div {background-color: red;}*/
 
+/*a {
+    color: green !important;
+    color: red !important;
+}*/
+
+/*.rojo {color: red}*/
+
 /* herencia */
 
 /*div {
@@ -18,6 +25,8 @@ div {background-color: red;}*/
     background-color: red;
     padding: 10px;
 }*/
+
+
 
 
 
