--- a/style_propiedades.css
+++ b/style_propiedades.css
@@ -1,3 +1,7 @@
+/* * {
+    font-family: Verdana, Geneva; la fuente mejor en el selector universal (poner mínimo dos por si no carga la 1º)
+} */
+
 /*.texto {
     font-family:'Lucida Sans';
     font-size: 16px;
@@ -28,21 +32,23 @@
     /* 1em = 16px | 2em = 32px */
 
     /* height: 100px; */
-    /* height: 100%; uto */
+    /* height: 100%; auto */
     /* height: 100vh; 100% de la altura de la pantalla(dispositivo) */
-    /*overflow: hidden;desbordamiento oculto*/
+    /*overflow: hidden;desbordamiento oculto (mejor poner hidden)*/
     /* overflow-x: scroll;
     overflow-y: scroll; */
     /* height: auto; */
 
     /* width: 100vw;
     height: 100vh; Para que ajuste el diseño a la pantalla del dispositivo
+    si se va a dejar el ancho automático declararlo siempre aunque venga por defecto para que no herede de otros elementos
 } */
 
 .margin-padding {
     border: 2px solid red;
     margin: 10px 20px;
-    padding: 1em;/*un carácter para no heredar se usa rem solo respecto al navegador 16px*/ 
+    /* 16px = 1em | 16 x 1.5em = 24px | 16 x 2em = 32px
+    padding: 1em;/*un carácter, para no heredar se usa rem solo respecto al navegador 16px*/ 
     /*background-color: green;*/
     /*border: 2px solid red;*/
     /*margin-top: 20px;
