--- a/ejercicio.css
+++ b/ejercicio.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 /* 1º Ejer */
 /* .padre {
     background-color: blue;
@@ -50,26 +54,106 @@
     height: 100px;
 }*/
 
-/* 4º Ejercicio */
+/* 4º Ejercicio 
   .padre {
     background-color: blue;
-    width: 500px;
+    width: 80%;
     height: 500px;
 
     display: flex;
     /* flex-direction: row;
     flex-wrap: nowrap; 
-    justify-content:flex-start; por defecto*/ 
+    justify-content:flex-start; por defecto
 }
 .hijo {
     background-color: yellow;
-    border: 2px solid  black;
+    border: 1px solid  black;
     width: 100px;
     height: 100px;
 
+    
 }  
 
-.derecha {
+ .derecha {
    margin-left: auto;
    
+} 
+
+
+ /* Ejer 5
+
+.padre {
+    background-color: blue;
+    width: 80%;
+    height: 500px;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap; 
+    align-items: center;
 }
+.hijo {
+    background-color: yellow;
+    border: 1px solid  black;
+    width: 100px;
+    height: 100px;
+
+   
+}   */
+
+/*Ejer 6*/
+/* .padre {
+    background-color: blue;
+    width: 80%;
+    height: 500px;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap; 
+    align-items: flex-end;
+}
+.hijo {
+    background-color: yellow;
+    border: 1px solid  black;
+    width: 100px;
+    height: 100px;
+
+   
+}   */
+
+/*ejer 7*/
+/* .padre {
+    background-color: blue;
+    width: 50%;
+    height: 500px;
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap; 
+    align-content: space-between;
+    
+}
+.hijo {
+    background-color: yellow;
+    border: 1px solid  black;
+    width: 100px;
+    height: 100px;
+}  
+
+
+/*Ejer 8*/
+.padre {
+    background-color: blue;
+    width: 500px;
+    height: 500px;
+    overflow-x: scroll;
+    
+    display: flex; 
+}
+.hijo {
+    background-color: yellow;
+    border: 1px solid  black;
+    width: 100px;
+    height: 100px;
+    flex-shrink: 0;
+}  
