--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import 'footer.css';
 @import 'layout.css';
 @import 'text.css';
+@import 'grid.css';
 
 /* BARRA DE NAVEGACIÓN */
 .nav-main ul {
@@ -33,42 +34,55 @@
 
 
 /* MAIN */
-#main {
+/* .main-home {
     display: flex;
+} */
+
+section {
+    /* background-color: orange; */
+}
+
+section img {
+    max-width: 100%;
+    height: auto;
+}
+
+aside {
+     background-color: rgb(204, 204, 204); 
+
 }
 
 /* SECTION */
-#main section {
+/* .main-home section {
     width: 70%;
     background-color: blue;
     display: flex;
     flex-wrap: wrap;
+    margin-left: -50px;
 }
 
-#main section img {
+.main-home section img {
     width: 100%;
     height: auto;
 }
 
-#main section div {
+.receta-full {
     background-color: pink;
-    width: 40%;
-    margin-right: 5px;
+    width: calc(50% - 50px);
+    margin-left: 50px;
     margin-bottom: 5px;
-}
+} */
 
-
-
-
-
-
+/* .receta-full:last-child(2n+1) {
+    margin-right: 0;
+} */
 
 /* ASIDE */
 
-#main aside {
+/* .main-home aside {
     width: 30%;
     background-color: red;
-}
+} */
 
 
 
