--- a/css/layout.css
+++ b/css/layout.css
@@ -3,7 +3,7 @@
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 1em;
-    background-color: rgba(204, 204, 204, 0.212);
+    
 }
 
 .block-center-row {
@@ -14,6 +14,9 @@
 
 /* margenes y paddings */
 
+.mb-05 {
+    margin-bottom: .5em;
+}
 .mb-1 {
     margin-bottom: 1em;
 }
@@ -22,4 +25,8 @@
 }
 .mb-3 {
     margin-bottom: 3em;
+}
+
+.pad-1 {
+    padding: 1em;
 }
