--- a/css/text.css
+++ b/css/text.css
@@ -1,20 +1,33 @@
-.fnt-xs {
-    font-size: 8px;
+.fnt-xs2 {
+    font-size: 10px;
 }
 
-.fnt-bs {
-    font-size: 16px;
+.fnt-xs {
+    font-size: 12px;
 }
 
 .fnt-md {
+    font-size: 14px;
+}
+
+.fnt-base {
+    font-size: 16px;
+}
+
+
+.fnt-lg {
     font-size: 18px;
 }
 
-.fnt-lg {
+.fnt-xl {
     font-size: 20px;
 }
 
-.fnt-xl {
+.fnt-xl2 {
     font-size: 22px;
+}
+
+.txt-center {
+    text-align: center;
 }
 
