--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,9 @@
 #footer {
     background-color: black;
     color: white;
+    padding: 1em;
+    margin: 5px 0;
+
+    display: flex;
+    justify-content: center;
 }
