--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,7 @@
 #footer {
     background-color: black;
     color: white;
-    padding: 1em;
-    margin: 5px 0;
-
-    display: flex;
-    justify-content: center;
+    margin-top: 1em;
+    
 }
+
