--- a/css/text.css
+++ b/css/text.css
@@ -16,18 +16,33 @@
 
 
 .fnt-lg {
-    font-size: 18px;
+    font-size: 18px;/* clamp */
 }
 
 .fnt-xl {
-    font-size: 20px;
+    font-size: 22px;
 }
 
 .fnt-xl2 {
-    font-size: 22px;
+    font-size: 26px;
+}
+
+.fnt-xl3 {
+    font-size: 28px;
+}
+
+.fnt-xl4 {
+    font-size: 32px;
+}
+
+.fnt-xl5 {
+    font-size: 42px;
 }
 
 .txt-center {
     text-align: center;
 }
 
+.line-normal {
+    line-height: 1.4;
+}
